# OSCO-OD-Gen

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  buildCGen.sh  cleanCGen.sh  main.js  package-lock.json  package.json
.github/workflows/: build.yml  cmake-build.yml  docker-build.yml  electron-build.yml  label-actions.yml  pr-mgt.yml
app/: .eslintrc.js  appdatapath.js  config.json  index.html  main.js  package.json  tsconfig.json
app/back/: backEndLauncher.js  configChecker.js  ipcBack.js  main.js
app/common/: appdatapath.js
app/front/: AppStyle.css  ipcFront.js
app/front/public/: index.html
app/front/styles/: AppStyle.css
app/main-process/: config.json  main.js  preload.js
app/main-process/AppDataPath/: AppDataPath.js
app/main-process/BackEndLauncher/: BackEndLauncher.js
app/main-process/BackEndManager/: BackEndManager.js
app/main-process/ConfigChecker/: configChecker.js
app/main-process/IPCMain/: IPCMain.js
app/main-process/ThemeHandler/: ThemeHandler.js
app/public/: manifest.json
app/src/: renderer.js
app/src/App/: App.css  App.tsx
app/src/IPCRenderer/: IPCRenderer.js
app/src/components/BackEndLauncher/: BackEndLauncherButton.jsx
app/src/components/BackEndLauncherButton/: BackEndLauncherButton.css
app/src/components/CommentsForm/: CommentsForm.jsx
app/src/components/MainContainer/: MainContainer.css  MainContainer.jsx
app/src/components/MainSideBar/: MainSideBar.css  MainSideBar.jsx
app/src/components/ODTab/: ODTab.css  ODTab.jsx
app/src/components/ODTree/: ODTree.jsx
app/src/components/ODView/: ODView.jsx
app/src/components/ReactHome/: ReactHome.css  ReactHome.jsx
docker/: Dockerfile  docker-compose.yml
generator/: CMakeLists.txt  README.md
generator/docs/: CMakeLists.txt  Doxyfile.in
generator/examples/od/: IO.eds  README.md
generator/examples/od/dcf/: co-nmt-master.dcf
generator/examples/od/json/: IO-beautified.json  IO.json
generator/examples/od/test/node1/: node1-od.eds
generator/examples/od/test/node2/: OSCOGenOD.c  OSCOGenOD.h  OSCOGenOD_DefaultValues.c  OSCOGenOD_Values.c  node2-od.eds
generator/inc/: APIExports.h  EDS.hpp  EDSTools.hpp  JSONFactory.hpp  OSCONode.hpp  OSCOOD.hpp  OSCOODFactory.hpp  OSCOODGenerator.hpp  OSCOODIndex.hpp  OSCOODObject.hpp  OSCOODREST.hpp  OSCOODSubIndex.hpp  OSCOTypes.h  Version.h.in
generator/src/: CMakeLists.txt  EDS.cpp  EDS.hpp  EDSTools.cpp  INI.cpp  INI.hpp  JSONFactory.cpp  OSCONode.cpp  OSCOOD.cpp  OSCOODFactory.cpp  OSCOODGenerator.cpp  OSCOODIndex.cpp  OSCOODObject.cpp  OSCOODREST.cpp  OSCOODSubIndex.cpp  OSCOTypes.c  main.cpp
generator/src/rest.bak/: CMakeLists.txt
generator/src/rest/inc/: HTTPRequest.hpp  RESTServer.hpp  http_parser_callbacks.h
generator/src/rest/resources/: webpage.cpp  webpage.hpp
generator/src/rest/src/: CMakeLists.txt  HTTPRequest.cpp  RESTServer.cpp  http_parser_callbacks.c  main.cpp
generator/templates/: OSCOGenNodeID.in.h  OSCOGenOD.in.c  OSCOGenOD.in.h  OSCOGenOD_DefaultValues.in.c  OSCOGenOD_MaxValues.in.c  OSCOGenOD_MinValues.in.c  OSCOGenOD_Values.in.c
generator/tests/: CMakeLists.txt  main.cpp
